--- a/app/widgets/com.test.ExpandingRow/views/widget.xml
+++ b/app/widgets/com.test.ExpandingRow/views/widget.xml
@@ -1,7 +1,7 @@
 <Alloy>
-	<TableViewRow id="reviewRow"  onClick="reviewClick">
-		<Label id="reviewTitle" />
-		<Label id="reviewText" />
-		<Label id="reviewAuthor" />
+	<TableViewRow id="reviewRow">
+			<Label id="reviewTitle" />
+			<Label id="reviewText" />
+			<Label id="reviewAuthor" />
 	</TableViewRow>
 </Alloy>
